--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    android:backgroundTint="#126055"
+    tools:context=".MainActivity">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_vertical_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#A1D0E6"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
 
     <androidx.camera.view.PreviewView
@@ -20,33 +27,101 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:scaleType="fillCenter"/>
-
-
-
-
-
-
+        app:scaleType="fillCenter" />
 
     <com.example.camerax.CustomImageView
             android:id="@+id/myCustomImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="351dp"
         android:layout_height="133dp"
         android:layout_gravity="center|clip_vertical|top"
+        android:fontFamily="@font/nunito_sans_extrabold"
         android:gravity="center|top"
         android:paddingTop="20dp"
         android:text="@string/QRcode"
-        android:textColor="#B2FF59"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/preview_view" />
+
+    <Button
+        android:id="@+id/button_scan"
+        android:layout_width="wrap_content"
+        android:layout_height="62dp"
+        android:layout_gravity="center_horizontal"
+
+        android:layout_marginEnd="20dp"
+        android:alpha="0.95"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/nunito_sans_bold"
+        android:gravity="center"
+        android:text="Scan QR"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/flash_button"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_center"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.95"
+        app:layout_constraintHorizontal_bias="1"/>
+
+    <Button
+        android:id="@+id/button_reason"
+        android:layout_width="wrap_content"
+        android:layout_height="62dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="10dp"
+
+        android:alpha="0.95"
+
+
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/nunito_sans_bold"
+
+        android:gravity="center"
+        android:text="Add reason"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+
+        app:layout_constraintBottom_toTopOf="@+id/flash_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_center"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.95"
+        app:layout_constraintHorizontal_bias="0"/>
+
+    <Button
+        android:id="@+id/flash_button"
+        android:layout_width="60dp"
+        android:layout_height="65dp"
+        android:layout_gravity="center_horizontal"
+
+        android:backgroundTint="#B3E5FC"
+
+        android:contentDescription="Torch"
+        android:drawableBottom="@drawable/baseline_flashlight_on_24"
+        android:focusable="true"
+        android:gravity="center"
+        android:paddingBottom="14dp"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.85"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
